polyglot-core/src/test/resources/grammars/negative/test-nopackage.polyglot
Tokens

	tok_a = 'a' ;

Productions

	expression =
		tok_a
			{ -> New expression(tok_a) } ;

Abstract Syntax Tree

	expression =
		tok_a ;

